--- a/archives/toutiao-search/2024-03-27.md
+++ b/archives/toutiao-search/2024-03-27.md
@@ -1,57 +1,69 @@
 # 2024-03-27
 
-共 76 条
+共 82 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Mar 27 2024 03:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Mar 27 2024 04:00:41 GMT+0800 (China Standard Time) -->
 1. [国足战胜新加坡迎2024正式比赛首胜](https://so.toutiao.com/search?keyword=国足战胜新加坡迎2024正式比赛首胜)
 1. [撞塌美大桥的货船事发前已失去动力](https://so.toutiao.com/search?keyword=撞塌美大桥的货船事发前已失去动力)
 1. [赏花经济带动文旅市场春潮涌动](https://so.toutiao.com/search?keyword=赏花经济带动文旅市场春潮涌动)
-1. [王树国为啥选择出任福耀大学校长](https://so.toutiao.com/search?keyword=王树国为啥选择出任福耀大学校长)
+1. [庭审现场：陈戌源90度鞠躬道歉](https://so.toutiao.com/search?keyword=庭审现场：陈戌源90度鞠躬道歉)
 1. [南通全面禁止制售封建迷信殡葬用品](https://so.toutiao.com/search?keyword=南通全面禁止制售封建迷信殡葬用品)
+1. [普京称俄罗斯知道恐袭是谁下的手](https://so.toutiao.com/search?keyword=普京称俄罗斯知道恐袭是谁下的手)
+1. [王树国为啥选择出任福耀大学校长](https://so.toutiao.com/search?keyword=王树国为啥选择出任福耀大学校长)
+1. [俄军对乌克兰决策中心进行集群打击](https://so.toutiao.com/search?keyword=俄军对乌克兰决策中心进行集群打击)
 1. [武磊登顶世预赛射手榜](https://so.toutiao.com/search?keyword=武磊登顶世预赛射手榜)
-1. [大地磁暴有人自称失眠头疼](https://so.toutiao.com/search?keyword=大地磁暴有人自称失眠头疼)
-1. [专家：莫斯科恐袭打响俄第二场战争](https://so.toutiao.com/search?keyword=专家：莫斯科恐袭打响俄第二场战争)
-1. [国足出线形势：6月赢泰国即可出线](https://so.toutiao.com/search?keyword=国足出线形势：6月赢泰国即可出线)
 1. [义乌冰雹极端天气后4S店忙疯了](https://so.toutiao.com/search?keyword=义乌冰雹极端天气后4S店忙疯了)
 1. [女子裸体现身武汉某商场 警方介入](https://so.toutiao.com/search?keyword=女子裸体现身武汉某商场+警方介入)
 1. [莫斯科恐袭4嫌犯着装与袭击者相同](https://so.toutiao.com/search?keyword=莫斯科恐袭4嫌犯着装与袭击者相同)
 1. [南宁出现大量裸奔人士系谣言](https://so.toutiao.com/search?keyword=南宁出现大量裸奔人士系谣言)
-1. [江西一产科主任被曝与代孕机构合作](https://so.toutiao.com/search?keyword=江西一产科主任被曝与代孕机构合作)
-1. [普京称俄罗斯知道恐袭是谁下的手](https://so.toutiao.com/search?keyword=普京称俄罗斯知道恐袭是谁下的手)
-1. [独居男子家中死亡至少半年后被发现](https://so.toutiao.com/search?keyword=独居男子家中死亡至少半年后被发现)
-1. [巴总理赴中使馆吊唁在巴遇难中国公民](https://so.toutiao.com/search?keyword=巴总理赴中使馆吊唁在巴遇难中国公民)
-1. [俄军对乌克兰决策中心进行集群打击](https://so.toutiao.com/search?keyword=俄军对乌克兰决策中心进行集群打击)
-1. [特朗普警告以色列：必须结束战争](https://so.toutiao.com/search?keyword=特朗普警告以色列：必须结束战争)
+1. [专家：恐怖分子袭中国车队有3目的](https://so.toutiao.com/search?keyword=专家：恐怖分子袭中国车队有3目的)
 1. [第1年招生的福耀科技大学值得报考吗](https://so.toutiao.com/search?keyword=第1年招生的福耀科技大学值得报考吗)
+1. [媒体人热议国足大胜](https://so.toutiao.com/search?keyword=媒体人热议国足大胜)
+1. [巴总理赴中使馆吊唁在巴遇难中国公民](https://so.toutiao.com/search?keyword=巴总理赴中使馆吊唁在巴遇难中国公民)
+1. [特朗普警告以色列：必须结束战争](https://so.toutiao.com/search?keyword=特朗普警告以色列：必须结束战争)
+1. [社保挂靠代缴已被明确为违法](https://so.toutiao.com/search?keyword=社保挂靠代缴已被明确为违法)
+1. [大地磁暴有人自称失眠头疼](https://so.toutiao.com/search?keyword=大地磁暴有人自称失眠头疼)
+1. [专家：莫斯科恐袭打响俄第二场战争](https://so.toutiao.com/search?keyword=专家：莫斯科恐袭打响俄第二场战争)
+1. [刘建宏谈曾谏言陈戌源：我很傻很天真](https://so.toutiao.com/search?keyword=刘建宏谈曾谏言陈戌源：我很傻很天真)
 1. [王大雷时隔2292天在国足正赛中首发](https://so.toutiao.com/search?keyword=王大雷时隔2292天在国足正赛中首发)
-1. [原二炮副政委史克信逝世](https://so.toutiao.com/search?keyword=原二炮副政委史克信逝世)
-1. [俄称西方和乌情报机构协助实施恐袭](https://so.toutiao.com/search?keyword=俄称西方和乌情报机构协助实施恐袭)
-1. [庭审现场：陈戌源90度鞠躬道歉](https://so.toutiao.com/search?keyword=庭审现场：陈戌源90度鞠躬道歉)
-1. [黑龙江多地上空现不明飞行物](https://so.toutiao.com/search?keyword=黑龙江多地上空现不明飞行物)
+1. [普京：恐袭事件是乌与俄作战一部分](https://so.toutiao.com/search?keyword=普京：恐袭事件是乌与俄作战一部分)
+1. [中国人民不会忘记驻南联盟使馆被炸](https://so.toutiao.com/search?keyword=中国人民不会忘记驻南联盟使馆被炸)
+1. [国足出线形势：6月赢泰国即可出线](https://so.toutiao.com/search?keyword=国足出线形势：6月赢泰国即可出线)
 1. [莫斯科恐袭案再逮捕3名嫌犯](https://so.toutiao.com/search?keyword=莫斯科恐袭案再逮捕3名嫌犯)
-1. [烧水喝比买桶装水更健康吗](https://so.toutiao.com/search?keyword=烧水喝比买桶装水更健康吗)
+1. [被摧毁的数藏玩家：50万变电子垃圾](https://so.toutiao.com/search?keyword=被摧毁的数藏玩家：50万变电子垃圾)
 1. [国足主场4-1新加坡](https://so.toutiao.com/search?keyword=国足主场4-1新加坡)
 1. [普京：美国试图将恐袭真凶指向IS](https://so.toutiao.com/search?keyword=普京：美国试图将恐袭真凶指向IS)
-1. [被摧毁的数藏玩家：50万变电子垃圾](https://so.toutiao.com/search?keyword=被摧毁的数藏玩家：50万变电子垃圾)
 1. [为何巴境内针对中国人的恐袭增多](https://so.toutiao.com/search?keyword=为何巴境内针对中国人的恐袭增多)
+1. [上一次国足3球以上的大胜为4-0缅甸](https://so.toutiao.com/search?keyword=上一次国足3球以上的大胜为4-0缅甸)
+1. [解放军原38军副军长刘成斋逝世](https://so.toutiao.com/search?keyword=解放军原38军副军长刘成斋逝世)
+1. [5名中国公民巴基斯坦遇袭身亡](https://so.toutiao.com/search?keyword=5名中国公民巴基斯坦遇袭身亡)
+1. [黑龙江多地上空现不明飞行物](https://so.toutiao.com/search?keyword=黑龙江多地上空现不明飞行物)
+1. [王树国签约仪式与会嘉宾都有谁](https://so.toutiao.com/search?keyword=王树国签约仪式与会嘉宾都有谁)
+1. [中国车队在巴遇袭现场：车辆损坏严重](https://so.toutiao.com/search?keyword=中国车队在巴遇袭现场：车辆损坏严重)
+1. [俄称西方和乌情报机构协助实施恐袭](https://so.toutiao.com/search?keyword=俄称西方和乌情报机构协助实施恐袭)
+1. [董铮收受恒大等23家俱乐部贿赂](https://so.toutiao.com/search?keyword=董铮收受恒大等23家俱乐部贿赂)
+1. [俄乌冲突因何按下加速键](https://so.toutiao.com/search?keyword=俄乌冲突因何按下加速键)
+1. [俄称恐袭嫌犯已提供雇主详细证词](https://so.toutiao.com/search?keyword=俄称恐袭嫌犯已提供雇主详细证词)
+1. [江西一产科主任被曝与代孕机构合作](https://so.toutiao.com/search?keyword=江西一产科主任被曝与代孕机构合作)
+1. [武磊累计两黄停赛将缺席下轮关键战](https://so.toutiao.com/search?keyword=武磊累计两黄停赛将缺席下轮关键战)
+1. [美称无迹象表明桥梁坍塌事件是蓄意](https://so.toutiao.com/search?keyword=美称无迹象表明桥梁坍塌事件是蓄意)
+1. [陈戌源妻儿也涉案](https://so.toutiao.com/search?keyword=陈戌源妻儿也涉案)
+1. [台名嘴谈马英九再访大陆：补修学分](https://so.toutiao.com/search?keyword=台名嘴谈马英九再访大陆：补修学分)
+1. [日本酒牵涉问题红曲 台当局发示警](https://so.toutiao.com/search?keyword=日本酒牵涉问题红曲+台当局发示警)
+1. [陈戌源揭发他人罪行已从轻处罚](https://so.toutiao.com/search?keyword=陈戌源揭发他人罪行已从轻处罚)
+1. [济南市财政局原副局长王勇被查](https://so.toutiao.com/search?keyword=济南市财政局原副局长王勇被查)
+1. [秋瓷炫喝醉被于晓光背上车](https://so.toutiao.com/search?keyword=秋瓷炫喝醉被于晓光背上车)
+1. [独居男子家中死亡至少半年后被发现](https://so.toutiao.com/search?keyword=独居男子家中死亡至少半年后被发现)
+1. [原二炮副政委史克信逝世](https://so.toutiao.com/search?keyword=原二炮副政委史克信逝世)
+1. [烧水喝比买桶装水更健康吗](https://so.toutiao.com/search?keyword=烧水喝比买桶装水更健康吗)
 1. [俄称莫斯科恐袭案4名被告全部认罪](https://so.toutiao.com/search?keyword=俄称莫斯科恐袭案4名被告全部认罪)
 1. [英王室成员称国王康复时间比预期长](https://so.toutiao.com/search?keyword=英王室成员称国王康复时间比预期长)
-1. [5名中国公民巴基斯坦遇袭身亡](https://so.toutiao.com/search?keyword=5名中国公民巴基斯坦遇袭身亡)
-1. [普京：恐袭事件是乌与俄作战一部分](https://so.toutiao.com/search?keyword=普京：恐袭事件是乌与俄作战一部分)
-1. [刘建宏谈曾谏言陈戌源：我很傻很天真](https://so.toutiao.com/search?keyword=刘建宏谈曾谏言陈戌源：我很傻很天真)
-1. [中国车队在巴遇袭现场：车辆损坏严重](https://so.toutiao.com/search?keyword=中国车队在巴遇袭现场：车辆损坏严重)
-1. [媒体人热议国足大胜](https://so.toutiao.com/search?keyword=媒体人热议国足大胜)
 1. [专家：马英九访陆时间点有深意](https://so.toutiao.com/search?keyword=专家：马英九访陆时间点有深意)
-1. [陈戌源妻儿也涉案](https://so.toutiao.com/search?keyword=陈戌源妻儿也涉案)
 1. [“伊斯兰国”发布新威胁：还要袭俄](https://so.toutiao.com/search?keyword=“伊斯兰国”发布新威胁：还要袭俄)
-1. [台名嘴谈马英九再访大陆：补修学分](https://so.toutiao.com/search?keyword=台名嘴谈马英九再访大陆：补修学分)
 1. [救楼市再下“死命令” 房价会涨吗](https://so.toutiao.com/search?keyword=救楼市再下“死命令”+房价会涨吗)
 1. [“伊斯兰国”与俄罗斯有何深仇大恨](https://so.toutiao.com/search?keyword=“伊斯兰国”与俄罗斯有何深仇大恨)
-1. [俄乌冲突因何按下加速键](https://so.toutiao.com/search?keyword=俄乌冲突因何按下加速键)
 1. [被撞塌美大桥以其国歌作者名字命名](https://so.toutiao.com/search?keyword=被撞塌美大桥以其国歌作者名字命名)
-1. [王树国签约仪式与会嘉宾都有谁](https://so.toutiao.com/search?keyword=王树国签约仪式与会嘉宾都有谁)
-1. [中国人民不会忘记驻南联盟使馆被炸](https://so.toutiao.com/search?keyword=中国人民不会忘记驻南联盟使馆被炸)
 1. [加拿大开始从海地撤侨](https://so.toutiao.com/search?keyword=加拿大开始从海地撤侨)
 1. [菲律宾南海挑衅呈现出哪些新趋势](https://so.toutiao.com/search?keyword=菲律宾南海挑衅呈现出哪些新趋势)
 1. [王婆说媒景区连夜扩大说媒亭](https://so.toutiao.com/search?keyword=王婆说媒景区连夜扩大说媒亭)
@@ -59,17 +71,11 @@
 1. [美船只撞断大桥已致20人落水](https://so.toutiao.com/search?keyword=美船只撞断大桥已致20人落水)
 1. [开封王婆5年前的视频仍显工作热情](https://so.toutiao.com/search?keyword=开封王婆5年前的视频仍显工作热情)
 1. [媒体：王婆说破年轻人的相亲困境](https://so.toutiao.com/search?keyword=媒体：王婆说破年轻人的相亲困境)
-1. [解放军原38军副军长刘成斋逝世](https://so.toutiao.com/search?keyword=解放军原38军副军长刘成斋逝世)
 1. [女生取24颗胆结石没事盘着玩](https://so.toutiao.com/search?keyword=女生取24颗胆结石没事盘着玩)
 1. [美国男子捡走事故现场断腿边闻边啃](https://so.toutiao.com/search?keyword=美国男子捡走事故现场断腿边闻边啃)
-1. [秋瓷炫喝醉被于晓光背上车](https://so.toutiao.com/search?keyword=秋瓷炫喝醉被于晓光背上车)
 1. [冰雹砸穿车 女子大呼让孩子躲好](https://so.toutiao.com/search?keyword=冰雹砸穿车+女子大呼让孩子躲好)
-1. [美称无迹象表明桥梁坍塌事件是蓄意](https://so.toutiao.com/search?keyword=美称无迹象表明桥梁坍塌事件是蓄意)
 1. [全新现代索纳塔上市](https://so.toutiao.com/search?keyword=全新现代索纳塔上市)
 1. [美德重申反对以色列进攻拉法](https://so.toutiao.com/search?keyword=美德重申反对以色列进攻拉法)
-1. [武磊累计两黄停赛将缺席下轮关键战](https://so.toutiao.com/search?keyword=武磊累计两黄停赛将缺席下轮关键战)
-1. [上一次国足3球以上的大胜为4-0缅甸](https://so.toutiao.com/search?keyword=上一次国足3球以上的大胜为4-0缅甸)
-1. [专家：恐怖分子袭中国车队有3目的](https://so.toutiao.com/search?keyword=专家：恐怖分子袭中国车队有3目的)
 1. [试驾北京现代第十一代索纳塔](https://so.toutiao.com/search?keyword=试驾北京现代第十一代索纳塔)
 1. [媒体专访福原爱](https://so.toutiao.com/search?keyword=媒体专访福原爱)
 1. [小米汽车销售称泄密要赔百万](https://so.toutiao.com/search?keyword=小米汽车销售称泄密要赔百万)
